--- a/storefront-site/html/aboutus.html
+++ b/storefront-site/html/aboutus.html
@@ -6,83 +6,96 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us</title>
+    <link rel="stylesheet" href="../styles/global.css">
+    <link rel="stylesheet" href="../styles/google-material-icons.css">
+    <link rel="stylesheet" href="../styles/header.css">
+    <link rel="stylesheet" href="../styles/aboutus.css">
+    <link rel="stylesheet" href="../styles/footer.css">
 </head>
-
-<body topmargin="20">
-    <table>
-        <tr>
-            <th><a href="../index.html"><img src="../images/gray-circle.png" width="48"></a></th>
-            <th nowrap>Pandemic Essentials</th>
-            <th width="100%"></th>
-            <th nowrap><a href="./cart.html">🛒 Cart</a></th>
-            <th><a href="./login.html">Login</a></th>
-            <th><a href="./user-preferences.html">Preferences</a></th>
-        </tr>
-    </table>
-   <table>
-       <tr>
-           <th><img src="../images/about-us.png" width="100%"></th>
-       </tr>
-       <tr>
-        <th align="left"><h1>About Us</h1></th>
-        </tr>
-        <tr>
-            <th align="left"><h2>Who we are</h1></th>
-        </tr>
-        <tr>
-        <td align="left"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
-                molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
-                numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium
-                optio, eaque rerum!Provident similique accusantium nemo autem. Veritatis
-                obcaecati tenetur iure eius earum ut molestias architecto voluptate aliquam
-                nihil, eveniet aliquid culpa officia aut!Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
-                molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
-                numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium
-                optio, eaque rerum!Provident similique accusantium nemo autem. Veritatis
-                obcaecati tenetur iure eius earum ut molestias architecto voluptate aliquam
-                nihil, eveniet aliquid culpa officia aut!</p></td>
-        </tr>       
-        <tr>
-            <td align="left"><p></p></td>
-        </tr>
-        <tr>
-            <td align="left"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
-                molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
-                numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium
-                optio, eaque rerum!Provident similique accusantium nemo autem. Veritatis
-                obcaecati tenetur iure eius earum ut molestias architecto voluptate aliquam
-                nihil, eveniet aliquid culpa officia aut!Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
-                molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
-                numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium
-                optio, eaque rerum!Provident similique accusantium nemo autem. Veritatis
-                obcaecati tenetur iure eius earum ut molestias architecto voluptate aliquam
-                nihil, eveniet aliquid culpa officia aut</p></td>
-        </tr>
-        <tr>
-            <td align="left"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
-                molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
-                numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium
-                optio, eaque rerum!Provident similique accusantium nemo autem. Veritatis
-                obcaecati tenetur iure eius earum ut molestias architecto voluptate aliquam
-                nihil, eveniet aliquid culpa officia aut!Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
-                molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
-                numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium
-                optio, eaque rerum!Provident similique accusantium nemo autem. Veritatis
-                obcaecati tenetur iure eius earum ut molestias architecto voluptate aliquam
-                nihil, eveniet aliquid culpa officia aut</p></td>
-        </tr>
-   </table> 
+ <!-- BEGIN HEADER -->
+ <header>
+    <div class="logo-container">
+        <a href="../index.html">
+            <img src="../images/logo-transparent.png" class="logo" alt="Pandemic Essentials Logo">
+        </a>
+    </div>
+    <form class="search-form">
+        <input type="search" class="search-field" autocomplete="off" placeholder="Search...">
+    </form>
+    <nav class="header-nav">
+        <a href="./cart.html" class="header-nav-link"><span class="material-icons">shopping_cart</span> Cart</a>
+        <a href="./user-preferences.html" class="header-nav-link"><span class="material-icons">settings</span>
+            Preferences</a>
+        <div class="header-login-dropdown">
+            <a href="./login.html" class="header-nav-link">Sign In ▼</a>
+            <nav class="header-login-dropdown-content">
+                <div>
+                    <div class="header-login-dropdown-flex">
+                        <a href="./login.html">Sign In <span class="material-icons"
+                                style="font-size: 16px;">login</span></a>
+                        <a href="./register.html">Register <span class="material-icons"
+                                style="font-size: 16px;">person_add</span></a>
+                        <a href="../index.html">Log Out <span class="material-icons"
+                                style="font-size: 16px;">logout</span></a>
+                    </div>
+                </div>
+            </nav>
+        </div>
+    </nav>
+</header>
+<hr style="margin: 0; padding: 0; border: 0; height: 24px; box-shadow: inset 0 24px 24px -24px rgba(0, 0, 0, 0.5);">
+<!-- END HEADER -->
+<body class="about-us">  
+    <div class="what-we-do">
+    <h2>What We Do</h2>
+    <p>We know this is a stressful time, which is why we have created this organization to help you find and buy essential supplies. We know how important health and safety is for you and your family. We have made the process of buying pandemic supplies easy and fast! We started in 2019 as a response to the COVID-19 Pandemic. As we reach the light at the end of the tunnel it is important to remember be prepared for future pandemics. We hope you'll choose us for your current and future pandemic essential needs! If you have any questions feel free to email us at pandemic-essentials@example.com.
+    </p>
+    </div>
+    <h2 class="meet">Meet the Team</h2>
+    <div class="team">
+        <div class="head-shot"></div>
+        <div class="head-shot"></div>
+        <div class="head-shot"></div>
+        <div class="head-shot"></div>
+    </div>
+    <!-- BEGIN FOOTER -->
     <footer>
-        <table>
-            <tr>
-                <td><a href="./aboutus.html">About us</a></td>
-                <td><a href="./faq.html">FAQ's</a></td>
-            </tr>
-            <tr>
-                <td width="100%" align="center"> &copy; 2021 Copyright Codeninjas</td>
-            </tr>
-        </table>
+        <div class="footer-nav-container">
+            <nav class="footer-nav">
+                <b class="footer-nav-header">Information</b>
+                <a class="footer-nav-content" href="./aboutus.html">About Us</a>
+                <a class="footer-nav-content" href="./aboutus.html">Locations & Hours</a>
+                <a class="footer-nav-content" href="./tos.html">Terms of Service</a>
+                <a class="footer-nav-content" href="./privacy-policy.html">Privacy Policy</a>
+            </nav>
+            <nav class="footer-nav">
+                <b class="footer-nav-header">Services</b>
+                <a class="footer-nav-content" href="./faq.html">FAQ</a>
+                <a class="footer-nav-content" href="./returns.html">Returns</a>
+                <a class="footer-nav-content" href="./shipping.html">Shipping</a>
+            </nav>
+            <nav class="footer-nav">
+                <b class="footer-nav-header">Contact Us</b>
+                <span class="footer-nav-content">By Phone (Mon-Fri 9am-5pm):</span>
+                <span class="footer-nav-content"><a href="tel:+1555-123-4567">+1 (555) 123-4567</a></span>
+                <span class="footer-nav-content">By Email:</span>
+                <span class="footer-nav-content"><a
+                        href="mailto:pandemic-essentials@example.com">pandemic-essentials@example.com</a></span>
+            </nav>
+            <nav class="footer-nav">
+                <b class="footer-nav-header">Newsletter</b>
+                <a class="footer-nav-content" href="./faq.html">Subscribe</a>
+                <a class="footer-nav-content" href="./faq.html">Unsubscribe</a>
+            </nav>
+        </div>
+        <hr>
+        <nav class="footer-logo-container">
+            <a href="../index.html">
+                <img src="../images/logo-transparent.png" class="logo">
+            </a>
+        </nav>
     </footer>
+    <!-- END FOOTER -->
 </body>
 
 </html>
