--- a/storefront-site/html/confirmation.html
+++ b/storefront-site/html/confirmation.html
@@ -76,7 +76,7 @@
 
 
     <div class="outer-grid-product-listings">
-        <h2>Browse our full selection of products</h2>
+        <h2>Recommended Products</h2>
         <div class="inner-grid-product-listings">
             <a href="./products/product4.html">
                 <div class="product-listing">
