--- a/storefront-site/html/cart.html
+++ b/storefront-site/html/cart.html
@@ -6,148 +6,220 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cart</title>
+    <link rel="stylesheet" href="../styles/global.css">
+    <link rel="stylesheet" href="../styles/google-material-icons.css">
+    <link rel="stylesheet" href="../styles/header.css">
+    <link rel="stylesheet" href="../styles/cart.css">
+    <link rel="stylesheet" href="../styles/footer.css">
 </head>
 
-<body topmargin="20">
-    <table>
-        <tr>
-            <th><a href="../index.html"><img src="../images/gray-circle.png" width="48"></a></th>
-            <th nowrap>Pandemic Essentials</th>
-            <th width="100%"></th>
-            <th nowrap><a href="./cart.html">🛒 Cart</a></th>
-            <th><a href="./login.html">Login</a></th>
-            <th><a href="./user-preferences.html">Preferences</a></th>
-        </tr>
-    </table>
-    <br>
-    <br>
-    <div>
-        <table align="right">
-            <tr>
-                <th width="15%">⚫</th>
-                <th width="0%">――――――――</th>
-                <th width="15%">⚪</th>
-                <th width="0%">――――――――</th>
-                <th width="15%">⚪</th>
-            </tr>
-            <tr>
-                <th width="15%">Cart</th>
-                <th width="0%"></th>
-                <th width="15%">Payment</th>
-                <th width="0%"></th>
-                <th width="15%">Complete</th>
-            </tr>
-        </table>
+<body>
+    <!-- BEGIN HEADER -->
+    <header>
+        <div class="logo-container">
+            <a href="../index.html">
+                <img src="../images/logo-transparent.png" class="logo" alt="Pandemic Essentials Logo">
+            </a>
+        </div>
+        <form class="search-form">
+            <input type="search" class="search-field" autocomplete="off" placeholder="Search...">
+        </form>
+        <nav class="header-nav">
+            <a href="./cart.html" class="header-nav-link"><span class="material-icons">shopping_cart</span> Cart</a>
+            <a href="./user-preferences.html" class="header-nav-link"><span class="material-icons">settings</span>
+                Preferences</a>
+            <div class="header-login-dropdown">
+                <a href="./login.html" class="header-nav-link">Sign In ▼</a>
+                <nav class="header-login-dropdown-content">
+                    <div>
+                        <div class="header-login-dropdown-flex">
+                            <a href="./login.html">Sign In <span class="material-icons"
+                                    style="font-size: 16px;">login</span></a>
+                            <a href="./register.html">Register <span class="material-icons"
+                                    style="font-size: 16px;">person_add</span></a>
+                            <a href="../index.html">Log Out <span class="material-icons"
+                                    style="font-size: 16px;">logout</span></a>
+                        </div>
+                    </div>
+                </nav>
+            </div>
+        </nav>
+    </header>
+    <hr style="margin: 0; padding: 0; border: 0; height: 24px; box-shadow: inset 0 24px 24px -24px rgba(0, 0, 0, 0.5); background-color: #F0F0F0;">
+    <!-- END HEADER -->
+    <div class="main-container">
+        <div class="progress-container">
+            <div class="progress-inner-container">
+                <div class="progress">
+                    <div class="progress-cart">
+                        <div class="progress-step">
+                            <div>
+                                <span class="material-icons" style="color: #007600">check_circle</span>
+                            </div>
+                            <div>
+                                <b>Cart</b>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="progress-payment">
+                        <div class="progress-step">
+                            <div>
+                                <span class="material-icons" style="color: #C0C0C0">check_circle</span>
+                            </div>
+                            <div>
+                                <b>Payment</b>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="progress-confirmation">
+                        <div class="progress-step">
+                            <div>
+                                <span class="material-icons" style="color: #C0C0C0">check_circle</span>
+                            </div>
+                            <div>
+                                <b>Confirmation</b>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="cart-container">
+            <div class="cart">
+                <h1>Shopping Cart</h1>
+                <a href="./cart.html" style="font-size: 0.9em;">Deselect all items</a>
+                <div id="cart-legend-price">Price</div>
+                <hr>
+                <div class="cart-item">
+                    <div class="cart-item-checkbox">
+                        <div>
+                            <input type="checkbox" checked>
+                        </div>
+                    </div>
+                    <div class="cart-item-image">
+                        <img src="../images/product1.png">
+                    </div>
+                    <div class="cart-item-main">
+                        <a href="./products/product1.html" style="font-size: 1.1em;">Masks (50 ct)</a>
+                        <br>
+                        <span style="color: #007600; font-size: 0.9em;">In Stock</span>
+                        <br>
+                        <span style="color: #707070; font-size: 0.8em;">Elligible for FREE shipping & <a href="./returns">FREE returns</a></span>
+                        <br>
+                        <input type="checkbox"><span style="font-size: 0.9em;">This is a gift </span><a href="./faq.html" style="font-size: 0.7em;">Learn more</a>
+                        <br>
+                        <input list="quantity" name="quantity" value="Qty: 1" class="quantity">
+                        <datalist id="quantity">
+                            <option value="Qty: 0 (Delete)">
+                            <option value="Qty: 1">
+                            <option value="Qty: 2">
+                            <option value="Qty: 3">
+                            <option value="Qty: 4">
+                            <option value="Qty: 5">
+                        </datalist>
+                        <span style="color: #d0d0d0;">&nbsp;|&nbsp;</span> <a href="./cart.html" style="font-size: 0.8em;">Delete</a>
+                        <span style="color: #d0d0d0;">&nbsp;|&nbsp;</span> <a href="./cart.html" style="font-size: 0.8em;">Save for later</a>
+                        <span style="color: #d0d0d0;">&nbsp;|&nbsp;</span> <a href="./cart.html" style="font-size: 0.8em;">Compate with similar items</a>
+                    </div>
+                    <div class="cart-item-price">
+                        $18.99
+                    </div>
+                </div>
+                <hr>
+                <div class="cart-item">
+                    <div class="cart-item-checkbox">
+                        <div>
+                            <input type="checkbox" checked>
+                        </div>
+                    </div>
+                    <div class="cart-item-image">
+                        <img src="../images/product2.png">
+                    </div>
+                    <div class="cart-item-main">
+                        <a href="./products/product2.html" style="font-size: 1.1em;">Germ-X Hand Sanitizer (8 fl oz.)</a>
+                        <br>
+                        <span style="color: #b12704; font-size: 0.9em;">Only 15 left in stock - order soon.</span>
+                        <br>
+                        <span style="color: #707070; font-size: 0.8em;">Elligible for FREE shipping & <a href="./returns">FREE returns</a></span>
+                        <br>
+                        <input type="checkbox"><span style="font-size: 0.9em;">This is a gift </span><a href="./faq.html" style="font-size: 0.7em;">Learn more</a>
+                        <br>
+                        <input list="quantity" name="quantity" value="Qty: 1" class="quantity">
+                        <datalist id="quantity">
+                            <option value="Qty: 0 (Delete)">
+                            <option value="Qty: 1">
+                            <option value="Qty: 2">
+                            <option value="Qty: 3">
+                            <option value="Qty: 4">
+                            <option value="Qty: 5">
+                        </datalist>
+                        <span style="color: #d0d0d0;">&nbsp;|&nbsp;</span> <a href="./cart.html" style="font-size: 0.8em;">Delete</a>
+                        <span style="color: #d0d0d0;">&nbsp;|&nbsp;</span> <a href="./cart.html" style="font-size: 0.8em;">Save for later</a>
+                        <span style="color: #d0d0d0;">&nbsp;|&nbsp;</span> <a href="./cart.html" style="font-size: 0.8em;">Compate with similar items</a>
+                    </div>
+                    <div class="cart-item-price">
+                        $6.99
+                    </div>
+                </div>
+                <hr>
+                <div style="width: 100%; text-align: right; font-size: 1.2em;">
+                    <span>Subtotal (2 items): <b>$25.98</b></span>
+                </div>
+            </div>
+            
+        </div>
+        <div class="subtotal-container">
+            <div class="subtotal">
+                <span style="color: #007600; font-size: 0.9em;"><span class="material-icons">check_circle</span> Your order qualifies for FREE shipping.</span>
+                <br>
+                <span>Subtotal (2 items): <b>$25.98</b></span>
+                <br>
+                <input type="checkbox"><span style="font-size: 0.9em;"> This order contains a gift
+                <br>
+                <a href="./checkout.html">
+                    <button type="submit" class="submit-button">Proceed to checkout</button>
+                </a>
+            </div>
+        </div>
     </div>
-    <br>
-    <br>
-    <br>
-    <div>
-        <table>
-            <tr>
-                <td rowspan="6"><a href="./products/product1.html"><img src="../images/product1.png" width="256"></a></td>
-                <td>Mask</td>
-            </tr>
-            <tr>
-                <td>Product Description</td>
-            </tr>
-            <tr>
-                <td>
-                    <select id="product1-quantity" name="product1-quantity">
-                        <option value="1">1</option>
-                        <option value="2" selected>2</option>
-                        <option value="3">3</option>
-                        <option value="4">4</option>
-                        <option value="5">5</option>
-                    </select>
-                    <label for="product1-quantity">Quantity</label>
-                </td>
-            </tr>
-            <tr>
-                <td>Product total: 2 * $9.99 = <b>$19.98</b></td>
-            </tr>
-            <tr>
-                <td>&nbsp;</td>
-            </tr>
-            <tr>
-                <td><button type="button">Remove</button></td>
-            </tr>
-        </table>
-    </div>
-    <br>
-    <div>
-        <table>
-            <tr>
-                <td rowspan="6"><a href="./products/product2.html"><img src="../images/product2.png" width="256"></a></td>
-                <td>Hand Sanitizer</td>
-            </tr>
-            <tr>
-                <td>Product Description</td>
-            </tr>
-            <tr>
-                <td>
-                    <select id="product2-quantity" name="product2-quantity">
-                        <option value="1" selected>1</option>
-                        <option value="2">2</option>
-                        <option value="3">3</option>
-                        <option value="4">4</option>
-                        <option value="5">5</option>
-                    </select>
-                    <label for="product2-quantity">Quantity</label>
-                </td>
-            </tr>
-            <tr>
-                <td>Product total: 1 * $4.99 = <b>$4.99</b></td>
-            </tr>
-            <tr>
-                <td>&nbsp;</td>
-            </tr>
-            <tr>
-                <td><button type="button">Remove</button></td>
-            </tr>
-        </table>
-    </div>
-    <br>
-    <div>
-        <table width="40%">
-            <tr>
-                <td align="right">Subtotal: <b>$24.97</b></td>
-            </tr>
-            <tr>
-                <td align="right">Tax: <b>$1.81</b></td>
-            </tr>
-            <tr>
-                <td align="right">Shipping: <b>$4.99</b></td>
-            </tr>
-            <tr>
-                <td align="right"><b>―――――――――――――――</b></td>
-            </tr>
-            <tr>
-                <td align="right">Total Cart Price: <b>$31.77</b></td>
-            </tr>
-            <tr>
-                <td align="right">
-                    <a href="./checkout.html">
-                        <input type="submit" value="➤ Checkout">
-                    </form>
-                </td>
-            </tr>
-        </table>
-    </div>
-    <br>
-    <br>
-    <br>
+    <!-- BEGIN FOOTER -->
     <footer>
-        <table>
-            <tr>
-                <td><a href="./aboutus.html">About us</a></td>
-                <td><a href="./faq.html">FAQ's</a></td>
-            </tr>
-            <tr>
-                <td width="100%" align="center"> &copy; 2021 Copyright Codeninjas</td>
-            </tr>
-        </table>
+        <div class="footer-nav-container">
+            <nav class="footer-nav">
+                <b class="footer-nav-header">Information</b>
+                <a class="footer-nav-content" href="./aboutus.html">About Us</a>
+                <a class="footer-nav-content" href="./aboutus.html">Locations & Hours</a>
+                <a class="footer-nav-content" href="./tos.html">Terms of Service</a>
+                <a class="footer-nav-content" href="./privacy-policy.html">Privacy Policy</a>
+            </nav>
+            <nav class="footer-nav">
+                <b class="footer-nav-header">Services</b>
+                <a class="footer-nav-content" href="./faq.html">FAQ</a>
+                <a class="footer-nav-content" href="./returns.html">Returns</a>
+                <a class="footer-nav-content" href="./shipping.html">Shipping</a>
+            </nav>
+            <nav class="footer-nav">
+                <b class="footer-nav-header">Contact Us</b>
+                <span class="footer-nav-content">By Phone (Mon-Fri 9am-5pm):</span>
+                <span class="footer-nav-content"><a href="tel:+1555-123-4567">+1 (555) 123-4567</a></span>
+                <span class="footer-nav-content">By Email:</span>
+                <span class="footer-nav-content"><a
+                        href="mailto:pandemic-essentials@example.com">pandemic-essentials@example.com</a></span>
+            </nav>
+            <nav class="footer-nav">
+                <b class="footer-nav-header">Newsletter</b>
+                <a class="footer-nav-content" href="./faq.html">Subscribe</a>
+                <a class="footer-nav-content" href="./faq.html">Unsubscribe</a>
+            </nav>
+        </div>
+        <hr>
+        <nav class="footer-logo-container">
+            <a href="../index.html">
+                <img src="../images/logo-transparent.png" class="logo">
+            </a>
+        </nav>
     </footer>
+    <!-- END FOOTER -->
 </body>
 
 </html>
