Fix footer links

--- a/storefront-site/html/user-preferences-change-email-subscription.html
+++ b/storefront-site/html/user-preferences-change-email-subscription.html
@@ -90,7 +90,7 @@
             <nav class="footer-nav">
                 <b class="footer-nav-header">Information</b>
                 <a class="footer-nav-content" href="./aboutus.html">About Us</a>
-                <a class="footer-nav-content" href="./aboutus.html">Locations & Hours</a>
+                <a class="footer-nav-content" href="./locations.html">Locations & Hours</a>
                 <a class="footer-nav-content" href="./tos.html">Terms of Service</a>
                 <a class="footer-nav-content" href="./privacy-policy.html">Privacy Policy</a>
             </nav>
@@ -110,8 +110,8 @@
             </nav>
             <nav class="footer-nav">
                 <b class="footer-nav-header">Newsletter</b>
-                <a class="footer-nav-content" href="./faq.html">Subscribe</a>
-                <a class="footer-nav-content" href="./faq.html">Unsubscribe</a>
+                <a class="footer-nav-content" href="./user-preferences-change-email-subscription.html">Subscribe</a>
+                <a class="footer-nav-content" href="./user-preferences-change-email-subscription.html">Unsubscribe</a>
             </nav>
         </div>
         <hr>
