Update cart page

--- a/storefront-site/html/cart.html
+++ b/storefront-site/html/cart.html
@@ -104,7 +104,7 @@
                         <br>
                         <span style="color: #007600; font-size: 0.9em;">In Stock</span>
                         <br>
-                        <span style="color: #707070; font-size: 0.8em;">Elligible for FREE shipping & <a href="./returns">FREE returns</a></span>
+                        <span style="color: #707070; font-size: 0.8em;">Elligible for FREE shipping & <a href="./returns.html">FREE returns</a></span>
                         <br>
                         <input type="checkbox"><span style="font-size: 0.9em;">This is a gift </span><a href="./faq.html" style="font-size: 0.7em;">Learn more</a>
                         <br>
@@ -119,7 +119,7 @@
                         </datalist>
                         <span style="color: #d0d0d0;">&nbsp;|&nbsp;</span> <a href="./cart.html" style="font-size: 0.8em;">Delete</a>
                         <span style="color: #d0d0d0;">&nbsp;|&nbsp;</span> <a href="./cart.html" style="font-size: 0.8em;">Save for later</a>
-                        <span style="color: #d0d0d0;">&nbsp;|&nbsp;</span> <a href="./cart.html" style="font-size: 0.8em;">Compate with similar items</a>
+                        <span style="color: #d0d0d0;">&nbsp;|&nbsp;</span> <a href="./cart.html" style="font-size: 0.8em;">Compare with similar items</a>
                     </div>
                     <div class="cart-item-price">
                         $18.99
@@ -140,7 +140,7 @@
                         <br>
                         <span style="color: #b12704; font-size: 0.9em;">Only 15 left in stock - order soon.</span>
                         <br>
-                        <span style="color: #707070; font-size: 0.8em;">Elligible for FREE shipping & <a href="./returns">FREE returns</a></span>
+                        <span style="color: #707070; font-size: 0.8em;">Elligible for FREE shipping & <a href="./returns.html">FREE returns</a></span>
                         <br>
                         <input type="checkbox"><span style="font-size: 0.9em;">This is a gift </span><a href="./faq.html" style="font-size: 0.7em;">Learn more</a>
                         <br>
@@ -155,7 +155,7 @@
                         </datalist>
                         <span style="color: #d0d0d0;">&nbsp;|&nbsp;</span> <a href="./cart.html" style="font-size: 0.8em;">Delete</a>
                         <span style="color: #d0d0d0;">&nbsp;|&nbsp;</span> <a href="./cart.html" style="font-size: 0.8em;">Save for later</a>
-                        <span style="color: #d0d0d0;">&nbsp;|&nbsp;</span> <a href="./cart.html" style="font-size: 0.8em;">Compate with similar items</a>
+                        <span style="color: #d0d0d0;">&nbsp;|&nbsp;</span> <a href="./cart.html" style="font-size: 0.8em;">Compare with similar items</a>
                     </div>
                     <div class="cart-item-price">
                         $6.99
