--- a/storefront-site/html/products/product1.html
+++ b/storefront-site/html/products/product1.html
@@ -73,7 +73,7 @@
                 <div class="grid-item">
 
                     <button type="button"><span class="material-icons">shopping_cart</span>  Add to Cart</button>
-                    <a href="../confirmation.html"><a href="../confirmation.html"><button type="button">Buy Now</button></a></a>
+                    <a href="../confirmation.html"><a href="../confirmation.html"><button type="button" style="background-image: linear-gradient(#fac26d, #ffa41c);">Buy Now</button></a></a>
                 </div>
             </div>
             <div>
