--- a/storefront-site/html/aboutus.html
+++ b/storefront-site/html/aboutus.html
@@ -53,10 +53,10 @@
     </div>
     <h2 class="meet">Meet the Team</h2>
     <div class="team">
-        <div class="head-shot"></div>
-        <div class="head-shot"></div>
-        <div class="head-shot"></div>
-        <div class="head-shot"></div>
+        <div class="head-shot"><img src="../images/Jasneil.jpg" width="200px"></div>
+        <div class="head-shot"><img src="../images/Jinal.jpg" width="200px"></div>
+        <div class="head-shot"><img src="../images/Oliver.jpg" width="200px"></div>
+        <div class="head-shot"><img src="../images/Jingxing.jpg" width="200px"></div>
     </div>
     <!-- BEGIN FOOTER -->
     <footer>
