Fix product header/footer links

--- a/storefront-site/html/products/product1.html
+++ b/storefront-site/html/products/product1.html
@@ -23,19 +23,19 @@
         <input type="search" class="search-field" autocomplete="off" placeholder="Search...">
     </form>
     <nav class="header-nav">
-        <a href="./cart.html" class="header-nav-link"><span class="material-icons">shopping_cart</span> Cart</a>
-        <a href="./user-preferences.html" class="header-nav-link"><span class="material-icons">settings</span>
+        <a href="../cart.html" class="header-nav-link"><span class="material-icons">shopping_cart</span> Cart</a>
+        <a href="../user-preferences.html" class="header-nav-link"><span class="material-icons">settings</span>
             Preferences</a>
         <div class="header-login-dropdown">
-            <a href="./login.html" class="header-nav-link">Sign In ▼</a>
+            <a href="../login.html" class="header-nav-link">Sign In ▼</a>
             <nav class="header-login-dropdown-content">
                 <div>
                     <div class="header-login-dropdown-flex">
-                        <a href="./login.html">Sign In <span class="material-icons"
+                        <a href="../login.html">Sign In <span class="material-icons"
                                 style="font-size: 16px;">login</span></a>
-                        <a href="./register.html">Register <span class="material-icons"
+                        <a href="../register.html">Register <span class="material-icons"
                                 style="font-size: 16px;">person_add</span></a>
-                        <a href="../index.html">Log Out <span class="material-icons"
+                        <a href="../../index.html">Log Out <span class="material-icons"
                                 style="font-size: 16px;">logout</span></a>
                     </div>
                 </div>
@@ -94,16 +94,16 @@
         <div class="footer-nav-container">
             <nav class="footer-nav">
                 <b class="footer-nav-header">Information</b>
-                <a class="footer-nav-content" href="./aboutus.html">About Us</a>
-                <a class="footer-nav-content" href="./aboutus.html">Locations & Hours</a>
-                <a class="footer-nav-content" href="./tos.html">Terms of Service</a>
-                <a class="footer-nav-content" href="./privacy-policy.html">Privacy Policy</a>
+                <a class="footer-nav-content" href="../aboutus.html">About Us</a>
+                <a class="footer-nav-content" href="../locations.html">Locations & Hours</a>
+                <a class="footer-nav-content" href="../tos.html">Terms of Service</a>
+                <a class="footer-nav-content" href="../privacy-policy.html">Privacy Policy</a>
             </nav>
             <nav class="footer-nav">
                 <b class="footer-nav-header">Services</b>
-                <a class="footer-nav-content" href="./faq.html">FAQ</a>
-                <a class="footer-nav-content" href="./returns.html">Returns</a>
-                <a class="footer-nav-content" href="./shipping.html">Shipping</a>
+                <a class="footer-nav-content" href="../faq.html">FAQ</a>
+                <a class="footer-nav-content" href="../returns.html">Returns</a>
+                <a class="footer-nav-content" href="../shipping.html">Shipping</a>
             </nav>
             <nav class="footer-nav">
                 <b class="footer-nav-header">Contact Us</b>
@@ -115,8 +115,8 @@
             </nav>
             <nav class="footer-nav">
                 <b class="footer-nav-header">Newsletter</b>
-                <a class="footer-nav-content" href="./faq.html">Subscribe</a>
-                <a class="footer-nav-content" href="./faq.html">Unsubscribe</a>
+                <a class="footer-nav-content" href="../user-preferences-change-email-subscription.html">Subscribe</a>
+                <a class="footer-nav-content" href="../user-preferences-change-email-subscription.html">Unsubscribe</a>
             </nav>
         </div>
         <hr>
