--- a/storefront-site/html/products/product1.html
+++ b/storefront-site/html/products/product1.html
@@ -12,8 +12,8 @@
     <link rel="stylesheet" href="../../styles/product.css">
     <link rel="stylesheet" href="../../styles/footer.css">
 </head>
- <!-- BEGIN HEADER -->
- <header>
+<!-- BEGIN HEADER -->
+<header>
     <div class="logo-container">
         <a href="../../index.html">
             <img src="../../images/logo-transparent.png" class="logo" alt="Pandemic Essentials Logo">
@@ -44,50 +44,58 @@
     </nav>
 </header>
 <hr style="margin: 0; padding: 0; border: 0; height: 24px; box-shadow: inset 0 24px 24px -24px rgba(0, 0, 0, 0.5);">
-    <br>
-    <br>
-    <div>
-        <div class="product">
-            <div class="grid-container">
-                <div class="grid-item">
-                    <img src="../../images/product1.png" width="256">
-                </div>
-                <div class="grid-item">            
-                    <h3>
-                        <p class="stars">Rating: ★★★★☆</p>
-                        <p class="stock"><b>In Stock</b></p>
-                        <label for="product-quantity">Qty: </label>
-                        <select class="quantity" id="product-quantity" name="product-quantity">
-                            <option value="1" selected>1</option>
-                            <option value="2">2</option>
-                            <option value="3">3</option>
-                            <option value="4">4</option>
-                            <option value="5">5</option>
-                        </select>
-                        <p class="price">Price: $4.99</p>
-                        About this item:
-                        </h3>
-                        <br>
-                        <p class="description"> 3 LAYERS FACE MASKS: Hotodeal masks are made of soft and skin-friendly non-woven fabric, which makes it breathable and comfortable to wear.BREATHABLE & COMFORTABLE: Disposable face masks' length is 6.8 inch, the width is 3.7 inch, with the metal adjustable nose clip bridge. Soft and elastic earloop provide a light weight wearing experience for you. WIDELY USE: Facial masks are suitable for office, home, cycling, store and general public. It’s a good choice to wear it when you travel through malls, party and busy city streets.</p> 
-                </div>
-                <div class="grid-item">
-
-                    <button type="button"><span class="material-icons">shopping_cart</span>  Add to Cart</button>
-                    <a href="../confirmation.html"><a href="../confirmation.html"><button type="button" style="background-image: linear-gradient(#fac26d, #ffa41c);">Buy Now</button></a></a>
-                </div>
+<br>
+<br>
+<div>
+    <div class="product">
+        <div class="grid-container">
+            <div class="grid-item" style="align-self: start;">
+                <img src="../../images/product1.png" width="256">
             </div>
-            <div>
-            
-    </div>
-    <br>
-    <br>
-    <h2>Other Products:</h2>
-    <div class="other-products">
-        <div><a href="./product2.html"><img src="../../images/product2.png" width="60"></a></div>
-        <div><a href="./product3.html"><img src="../../images/product3.png" width="128"></a></div>
-        <div><a href="./product4.html"><img src="../../images/product4.png" width="128"></a></div>
-        <div><a href="./product5.html"><img src="../../images/product5.png" width="128"></a></div>
-    </div>
+            <div class="grid-item">
+                <h3>
+                    <span style="font-size: 1.2em;">Masks (50 ct)</span>
+                    <br>
+                    <br>
+                    <p class="stars">Rating: ★★★★☆</p>
+                    <p class="stock"><b>In Stock</b></p>
+                    <label for="product-quantity">Qty: </label>
+                    <select class="quantity" id="product-quantity" name="product-quantity">
+                        <option value="1" selected>1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                        <option value="5">5</option>
+                    </select>
+                    <p class="price">Price: <span style="color: #b12704;">$4.99</span></p>
+                    About this item:
+                </h3>
+                <p class="description">
+                    <div>
+                        <ul>
+                            <li>Disposable Face Mask: Suitable for Office School Outdoor</li>
+                            <li>Face Mask: it is made of 3 ply layers and premium non woven fabric, can better block the small particles in air and filter it</li>
+                            <li>This face mask is design with elastic ear loop, and the length can be adjusted</li>
+                            <li>Face Mask: Breathable, soft and comfortable, gentle to skin.</li>
+                            <li>Disposable masks: 50pc face masks</li>
+                        </ul>
+                    </div>
+                </p>
+            </div>
+            <div class="grid-item">
+                <button type="button" class="add-to-cart-button"><span class="material-icons">shopping_cart</span> Add to Cart</button>
+                <a href="../confirmation.html"><button type="button" class="buy-now-button">Buy Now</button></a>
+            </div>
+        </div>
+        <br>
+        <br>
+        <h2>Other Products:</h2>
+        <div class="other-products">
+            <div><a href="./product2.html"><img src="../../images/product2.png" width="60"></a></div>
+            <div><a href="./product3.html"><img src="../../images/product3.png" width="128"></a></div>
+            <div><a href="./product4.html"><img src="../../images/product4.png" width="128"></a></div>
+            <div><a href="./product5.html"><img src="../../images/product5.png" width="128"></a></div>
+        </div>
     </div>
     <!-- BEGIN FOOTER -->
     <footer>
@@ -127,6 +135,6 @@
         </nav>
     </footer>
     <!-- END FOOTER -->
-</body>
+    </body>
 
 </html>
