Dynamically set product image size

--- a/storefront-site/html/products/product1.html
+++ b/storefront-site/html/products/product1.html
@@ -91,10 +91,10 @@
         <br>
         <h2>Other Products:</h2>
         <div class="other-products">
-            <div><a href="./product2.html"><img src="../../images/product2.png" width="60"></a></div>
-            <div><a href="./product3.html"><img src="../../images/product3.png" width="128"></a></div>
-            <div><a href="./product4.html"><img src="../../images/product4.png" width="128"></a></div>
-            <div><a href="./product5.html"><img src="../../images/product5.png" width="128"></a></div>
+            <div><a href="./product2.html"><img src="../../images/product2.png" style="max-width: 128px; max-height: 128px;"></a></div>
+            <div><a href="./product3.html"><img src="../../images/product3.png" style="max-width: 128px; max-height: 128px;"></a></div>
+            <div><a href="./product4.html"><img src="../../images/product4.png" style="max-width: 128px; max-height: 128px;"></a></div>
+            <div><a href="./product5.html"><img src="../../images/product5.png" style="max-width: 128px; max-height: 128px;"></a></div>
         </div>
     </div>
     <!-- BEGIN FOOTER -->
