--- a/storefront-site/html/products/product1.html
+++ b/storefront-site/html/products/product1.html
@@ -44,13 +44,14 @@
     </nav>
 </header>
 <hr style="margin: 0; padding: 0; border: 0; height: 24px; box-shadow: inset 0 24px 24px -24px rgba(0, 0, 0, 0.5);">
+<!-- END HEADER -->
 <br>
 <br>
 <div>
     <div class="product">
         <div class="grid-container">
             <div class="grid-item" style="align-self: start;">
-                <img src="../../images/product1.png" width="256">
+                <img src="../../images/product1.png" style="max-width: 256px; max-height: 256px;">
             </div>
             <div class="grid-item">
                 <h3>
