Update product description

--- a/storefront-site/html/products/product1.html
+++ b/storefront-site/html/products/product1.html
@@ -74,10 +74,10 @@
                 <p class="description">
                     <div>
                         <ul>
-                            <li>Disposable Face Mask: Suitable for Office School Outdoor</li>
-                            <li>Face Mask: it is made of 3 ply layers and premium non woven fabric, can better block the small particles in air and filter it</li>
-                            <li>This face mask is design with elastic ear loop, and the length can be adjusted</li>
-                            <li>Face Mask: Breathable, soft and comfortable, gentle to skin.</li>
+                            <li>Disposable Face Mask: Suitable for Offices, Schools, Outdoors.</li>
+                            <li>Face Mask: It is made of 3 ply layers and premium non woven fabric, blocking and filtering small particles in the air.</li>
+                            <li>This face mask is designed with an adjustable elastic ear loop.</li>
+                            <li>Breathable, soft and comfortable, gentle to skin.</li>
                             <li>Disposable masks: 50pc face masks</li>
                         </ul>
                     </div>
