Update product listing

--- a/storefront-site/html/products/product1.html
+++ b/storefront-site/html/products/product1.html
@@ -74,8 +74,8 @@
                 <p class="description">
                     <div>
                         <ul>
-                            <li>Disposable Face Mask: Suitable for Offices, Schools, Outdoors.</li>
-                            <li>Face Mask: It is made of 3 ply layers and premium non woven fabric, blocking and filtering small particles in the air.</li>
+                            <li>Suitable for Offices, Schools, Outdoors.</li>
+                            <li>It is made of 3 ply layers and premium non woven fabric, blocking and filtering small particles in the air.</li>
                             <li>This face mask is designed with an adjustable elastic ear loop.</li>
                             <li>Breathable, soft and comfortable, gentle to skin.</li>
                             <li>Disposable masks: 50pc face masks</li>
