Fix image scaling

--- a/storefront-site/html/products/product1.html
+++ b/storefront-site/html/products/product1.html
@@ -50,7 +50,7 @@
 <div>
     <div class="product">
         <div class="grid-container">
-            <div class="grid-item" style="align-self: start;">
+            <div class="grid-item" style="width: 256px; height: 256px; align-self: start;">
                 <img src="../../images/product1.png" style="max-width: 256px; max-height: 256px;">
             </div>
             <div class="grid-item">
