--- a/storefront-site/html/products/product1.html
+++ b/storefront-site/html/products/product1.html
@@ -12,42 +12,43 @@
     <link rel="stylesheet" href="../../styles/product.css">
     <link rel="stylesheet" href="../../styles/footer.css">
 </head>
-<!-- BEGIN HEADER -->
-<header>
-    <div class="logo-container">
-        <a href="../../index.html">
-            <img src="../../images/logo-transparent.png" class="logo" alt="Pandemic Essentials Logo">
-        </a>
-    </div>
-    <form class="search-form">
-        <input type="search" class="search-field" autocomplete="off" placeholder="Search...">
-    </form>
-    <nav class="header-nav">
-        <a href="../cart.html" class="header-nav-link"><span class="material-icons">shopping_cart</span> Cart</a>
-        <a href="../user-preferences.html" class="header-nav-link"><span class="material-icons">settings</span>
-            Preferences</a>
-        <div class="header-login-dropdown">
-            <a href="../login.html" class="header-nav-link">Sign In ▼</a>
-            <nav class="header-login-dropdown-content">
-                <div>
-                    <div class="header-login-dropdown-flex">
-                        <a href="../login.html">Sign In <span class="material-icons"
-                                style="font-size: 16px;">login</span></a>
-                        <a href="../register.html">Register <span class="material-icons"
-                                style="font-size: 16px;">person_add</span></a>
-                        <a href="../../index.html">Log Out <span class="material-icons"
-                                style="font-size: 16px;">logout</span></a>
-                    </div>
-                </div>
-            </nav>
+
+<body>
+    <!-- BEGIN HEADER -->
+    <header>
+        <div class="logo-container">
+            <a href="../../index.html">
+                <img src="../../images/logo-transparent.png" class="logo" alt="Pandemic Essentials Logo">
+            </a>
         </div>
-    </nav>
-</header>
-<hr style="margin: 0; padding: 0; border: 0; height: 24px; box-shadow: inset 0 24px 24px -24px rgba(0, 0, 0, 0.5);">
-<!-- END HEADER -->
-<br>
-<br>
-<div>
+        <form class="search-form">
+            <input type="search" class="search-field" autocomplete="off" placeholder="Search...">
+        </form>
+        <nav class="header-nav">
+            <a href="../cart.html" class="header-nav-link"><span class="material-icons">shopping_cart</span> Cart</a>
+            <a href="../user-preferences.html" class="header-nav-link"><span class="material-icons">settings</span>
+                Preferences</a>
+            <div class="header-login-dropdown">
+                <a href="../login.html" class="header-nav-link">Sign In ▼</a>
+                <nav class="header-login-dropdown-content">
+                    <div>
+                        <div class="header-login-dropdown-flex">
+                            <a href="../login.html">Sign In <span class="material-icons"
+                                    style="font-size: 16px;">login</span></a>
+                            <a href="../register.html">Register <span class="material-icons"
+                                    style="font-size: 16px;">person_add</span></a>
+                            <a href="../../index.html">Log Out <span class="material-icons"
+                                    style="font-size: 16px;">logout</span></a>
+                        </div>
+                    </div>
+                </nav>
+            </div>
+        </nav>
+    </header>
+    <hr style="margin: 0; padding: 0; border: 0; height: 24px; box-shadow: inset 0 24px 24px -24px rgba(0, 0, 0, 0.5);">
+    <!-- END HEADER -->
+    <br>
+    <br>
     <div class="product">
         <div class="grid-container">
             <div class="grid-item" style="width: 256px; height: 256px; align-self: start;">
@@ -68,7 +69,7 @@
                         <option value="4">4</option>
                         <option value="5">5</option>
                     </select>
-                    <p class="price">Price: <span style="color: #b12704;">$4.99</span></p>
+                    <p class="price">Price: <span style="color: #b12704;">$18.99</span></p>
                     About this item:
                 </h3>
                 <p class="description">
@@ -78,7 +79,7 @@
                             <li>It is made of 3 ply layers and premium non woven fabric, blocking and filtering small particles in the air.</li>
                             <li>This face mask is designed with an adjustable elastic ear loop.</li>
                             <li>Breathable, soft and comfortable, gentle to skin.</li>
-                            <li>Disposable masks: 50pc face masks</li>
+                            <li>Disposable masks: 50pc face masks.</li>
                         </ul>
                     </div>
                 </p>
@@ -136,6 +137,6 @@
         </nav>
     </footer>
     <!-- END FOOTER -->
-    </body>
+</body>
 
 </html>
